[package]
name = "seaf-web"
version = "0.1.0"
authors = ["E-Neo <e-neo@qq.com>"]
edition = "2018"
description = "Seafile web tools"

[dependencies]
clap = "2.33"
lazy_static = "1.4"
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json", "multipart"] }
rpassword = "5.0"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
